--- a/css/styles.css
+++ b/css/styles.css
@@ -578,3 +578,67 @@ portfolio section */
     padding-bottom: 32px;
     padding-left: 16px;
 }
+
+.box{
+    position: relative;
+    overflow: hidden;
+}
+
+.box:hover .overlay {
+    transform: translatey(0);
+}
+
+.overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    padding: 40px 32px 164px;
+    transform: translatey(100%);
+    transition: transform 250ms ease;
+    font-family: roboto;
+    font-size: 16px;
+    line-height: 1.5;
+    color: #F4F4FD;
+    letter-spacing: 0.02em;
+    background-color:#4D5AE5;
+
+}
+
+/* modal */
+
+.backdrop{
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100% ;
+    background-color: rgba(19, 20, 18, 0.5);
+}
+
+.backdrop.is-hidden{
+    opacity: 0;
+    pointer-events: none;
+}
+
+.modal{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+   
+    width: 408px;
+    height: 576px;
+    padding: 24px 24px;
+    background-color: #FFFFFF;
+
+}
+
+.katya{
+    color: red;
+    font-weight: 700;
+    font-size: 56px;
+    line-height: 1.06;
+    text-align: center;
+}
